--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ main {
 .avatar {
   height: 2rem;
   border-radius: 50%;
-  margin: 0 0.75rem 0 0;
+  margin: 0.6rem 0.75rem 0 0;
 }
 
 .buttonsBox {
@@ -268,4 +268,15 @@ input:focus {
     color: black;
     font-size: larger;
     font-weight: bolder;
+}
+
+.first-letter{
+  background: rgb(98, 182, 79);
+    width: 31px;
+    height: 30px;
+    text-align: center;
+    border-radius: 14px;
+    padding-top: 3px;
+    margin-right: 15px;
+    border: 2px outset green;
 }
